[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/spikes.png" type="Texture" id=1]
[ext_resource path="res://scripts/spike.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 13 )

[node name="Spike" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpikeUp" type="Timer" parent="."]
one_shot = true

[node name="Reset" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 100, 200 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="." to="." method="_on_Spike_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spike_body_exited"]
